src/Zapisywarka.API/deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: API
  template:
    metadata:
      labels:
        app: API
    spec:
      containers:
      - name: api
        image: zapisywarka-api:latest
        imagePullPolicy: Never        
        ports:
        - containerPort: 5000
