src/Zapisywarka.API/deployment/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  labels:
    name: api
spec:
  rules:
  - host: api.zapisywarka.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: zapisywarka-api
            port: 
              number: 5000
